{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 312,
  "lineage": "4c956d5d-9908-d7c6-a3ef-4c554497be4e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Load_Balancer-BerguellaMohammed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:058264411404:loadbalancer/app/LB-BerguellaMohammed/14c4489acaf6ac4e",
            "arn_suffix": "app/LB-BerguellaMohammed/14c4489acaf6ac4e",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "LB-BerguellaMohammed-1459409933.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:058264411404:loadbalancer/app/LB-BerguellaMohammed/14c4489acaf6ac4e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "LB-BerguellaMohammed",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00346dd500b402ae7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00c1a909f003623cf"
              },
              {
                "subnet_id": "subnet-0e3b5a73eb879dbe8"
              }
            ],
            "subnets": [
              "subnet-00c1a909f003623cf",
              "subnet-0e3b5a73eb879dbe8"
            ],
            "vpc_id": "vpc-0049682c1b010a070",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.security_group_lb-BerguellaMohammed"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener-BerguellaMohammed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:058264411404:listener/app/LB-BerguellaMohammed/14c4489acaf6ac4e/b2117a28a5db00ff",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:058264411404:targetgroup/LB-TG-BerguellaMohammed/9caa3f8a4013727d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:058264411404:listener/app/LB-BerguellaMohammed/14c4489acaf6ac4e/b2117a28a5db00ff",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:058264411404:loadbalancer/app/LB-BerguellaMohammed/14c4489acaf6ac4e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Load_Balancer-BerguellaMohammed",
            "aws_lb_target_group.target_group-BerguellaMohammed",
            "aws_security_group.security_group_lb-BerguellaMohammed"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group-BerguellaMohammed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:058264411404:targetgroup/LB-TG-BerguellaMohammed/9caa3f8a4013727d",
            "arn_suffix": "targetgroup/LB-TG-BerguellaMohammed/9caa3f8a4013727d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:058264411404:targetgroup/LB-TG-BerguellaMohammed/9caa3f8a4013727d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "LB-TG-BerguellaMohammed",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0049682c1b010a070"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_lb-BerguellaMohammed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264411404:security-group/sg-00346dd500b402ae7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00346dd500b402ae7",
            "ingress": [],
            "name": "SG-LB",
            "name_prefix": "",
            "owner_id": "058264411404",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0049682c1b010a070"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_lt-BerguellaMohammed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264411404:security-group/sg-0aeaa8c6d1fb83b35",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0aeaa8c6d1fb83b35",
            "ingress": [],
            "name": "SG-LT",
            "name_prefix": "",
            "owner_id": "058264411404",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0049682c1b010a070"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_ssh-BerguellaMohammed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264411404:security-group/sg-01ba5a039c1164052",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01ba5a039c1164052",
            "ingress": [],
            "name": "SG-SSH",
            "name_prefix": "",
            "owner_id": "058264411404",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0049682c1b010a070"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress-LB-BerguellaMohammed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264411404:security-group-rule/sgr-0aa93672f0baa8db8",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0aa93672f0baa8db8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0aeaa8c6d1fb83b35",
            "security_group_id": "sg-00346dd500b402ae7",
            "security_group_rule_id": "sgr-0aa93672f0baa8db8",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_lb-BerguellaMohammed",
            "aws_security_group.security_group_lt-BerguellaMohammed"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress-LT-BerguellaMohammed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264411404:security-group-rule/sgr-07c27a88b498ab36e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07c27a88b498ab36e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0aeaa8c6d1fb83b35",
            "security_group_rule_id": "sgr-07c27a88b498ab36e",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_lt-BerguellaMohammed"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress-LB-BerguellaMohammed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264411404:security-group-rule/sgr-07f795f0da5e34b17",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-07f795f0da5e34b17",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00346dd500b402ae7",
            "security_group_rule_id": "sgr-07f795f0da5e34b17",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_lb-BerguellaMohammed"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress-LT-BerguellaMohammed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264411404:security-group-rule/sgr-06b234d395c169ffb",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-06b234d395c169ffb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-00346dd500b402ae7",
            "security_group_id": "sg-0aeaa8c6d1fb83b35",
            "security_group_rule_id": "sgr-06b234d395c169ffb",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_lb-BerguellaMohammed",
            "aws_security_group.security_group_lt-BerguellaMohammed"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress-LT-SSH-BerguellaMohammed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264411404:security-group-rule/sgr-0a6a54b30df14882d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0a6a54b30df14882d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0aeaa8c6d1fb83b35",
            "security_group_rule_id": "sgr-0a6a54b30df14882d",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_lt-BerguellaMohammed"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress-SSH-BerguellaMohammed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264411404:security-group-rule/sgr-0208fb754bff43c69",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0208fb754bff43c69",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01ba5a039c1164052",
            "security_group_rule_id": "sgr-0208fb754bff43c69",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_ssh-BerguellaMohammed"
          ]
        }
      ]
    }
  ]
}